Fix label-list rendering, decrease gap

--- a/web_src/css/repo.css
+++ b/web_src/css/repo.css
@@ -2274,9 +2274,9 @@
 }
 
 .labels-list {
-  display: flex;
+  display: inline-flex;
   flex-wrap: wrap;
-  gap: 0.25em;
+  gap: 2.5px;
 }
 
 .labels-list a {
